--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My solutions for the AoC 2018 challenge",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "kavun build/js/*",
+    "build": "tsc",
+    "clean": "rm -rf build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/SengitU/advent-of-code-2018/issues"
   },
-  "homepage": "https://github.com/SengitU/advent-of-code-2018#readme"
+  "homepage": "https://github.com/SengitU/advent-of-code-2018#readme",
+  "dependencies": {
+    "typescript": "^3.2.2"
+  },
+  "devDependencies": {
+    "kavun": "^3.0.0"
+  }
 }
