Add node types and update config to run untyped modules

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SengitU/advent-of-code-2018#readme",
   "dependencies": {
+    "@types/node": "^10.12.18",
     "typescript": "^3.2.2"
   },
   "devDependencies": {
