--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "outDir": "build/js",
         "rootDir": "src",
-        "target": "es6"
+        "target": "es6",
+        "moduleResolution": "node"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
