--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "My solutions for the AoC 2018 challenge",
   "main": "index.js",
   "scripts": {
-    "test": "kavun build/js/*",
+    "clean": "rm -rf build",
     "build": "tsc",
-    "clean": "rm -rf build"
+    "test": "npm run clean && npm run build && kavun `find ./build -iname *.spec.js`"
   },
   "repository": {
     "type": "git",
