--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "My solutions for the AoC 2018 challenge",
   "main": "index.js",
   "scripts": {
+    "lint:js": "eslint ./src/**/*.ts",
+    "lint-fix:js": "eslint ./src/**/*.ts --fix",
     "clean": "rm -rf build",
     "build": "tsc",
     "test": "npm run clean && npm run build && kavun `find ./build -iname *.spec.js`"
@@ -20,9 +22,12 @@
   "homepage": "https://github.com/SengitU/advent-of-code-2018#readme",
   "dependencies": {
     "@types/node": "^10.12.18",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "kavun": "^3.0.0" 
   },
   "devDependencies": {
-    "kavun": "^3.0.0"
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
